[package]
name = "palm-tree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.18"
x86_64 = "*"
uart_16550 = "*"
pc-keyboard = "*"
spin = "0.5.2"
volatile = "0.2.6"

[package.metadata.bootimage]
run-args = ["-serial", "stdio", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

